fix(input): auto-position dropdown menu to avoid clipping in modals

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -248,7 +248,7 @@
     block-size: 64px;
     border-inline-end: 0;
     inline-size: auto;
-    padding-inline: var(--space-4) var(--space-3);
+    padding-inline: var(--space-4);
   }
 
   .logo {
@@ -259,12 +259,12 @@
   .title {
     font-size: var(--text-heading-l-size);
     gap: 6px;
-    max-inline-size: 170px;
+    max-inline-size: 159px;
     padding-inline-start: 0;
   }
 
   .titleToggle {
-    max-inline-size: 170px;
+    max-inline-size: 159px;
   }
 
   .actions {
